--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
+        android:name=".App"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".intro.IntroActivity">
             <intent-filter>
@@ -22,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".signup.SignupActivity"/>
+        <activity android:name=".signin.SigninActivity" />
     </application>
 
 </manifest>
