--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".main.MainPageActivity"></activity>
+        <activity android:name=".mypage.orderList.OrderListActivity"></activity>
+        <activity android:name=".mypage.cart.CartActivity" />
+        <activity android:name=".mypage.stamp.StampActivity" />
+        <activity android:name=".mypage.updateInfo.UpdateInfoActivity" />
+        <activity android:name=".mypage.main.MyPageMain" />
+        <activity android:name=".main.MainPageActivity" />
         <activity android:name=".main.MainActivity" />
         <activity android:name=".intro.IntroActivity">
             <intent-filter>
