--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
 
+    implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+
 }
