--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-android-extensions'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -74,9 +76,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_version"
 
     implementation "androidx.paging:paging-runtime-ktx:2.1.0"
-
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-//    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    //kapt "android.arch.lifecycle:compiler:1.0.0"
+    //kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
     // ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
