--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:name=".product.registration.ProductRegistrationActivity"
             android:theme="@style/Theme.AppCompat.Light"
         />
+        <activity android:name=".donation.DonatesListActivity"/>
     </application>
 
 </manifest>
