--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
     implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1'
+
 }
