--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
     implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+    implementation "androidx.cardview:cardview:1.0.0"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.30.1'
 
