--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'androidx.activity:activity-ktx:1.1.0@aar'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06@aar'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.3'
     //kapt "android.arch.lifecycle:compiler:1.0.0"
     //kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
