--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Mar 17 21:32:32 KST 2021
-sdk.dir=C\:\\Users\\sua\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/seohyunkim/Library/Android/sdk
